Kafka Consumer synchronised

--- a/public/static/template.scss
+++ b/public/static/template.scss
@@ -200,6 +200,7 @@ h1 {
 \* ----------------------------------------------------------------------------------------------------------------- */
 .turbolinks-progress-bar {
     background-color: $red;
+    box-shadow: 0 1px 10px red;
 }
 
 /* ----------------------------------------------------------------------------------------------------------------- *\
