Move to webpack

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -147,4 +147,4 @@ $pre-color: inherit !default;
 /* ----------------------------------------------------------------------------------------------------------------- *\
     Font Awesome
 \* ----------------------------------------------------------------------------------------------------------------- */
-$fa-font-path: "/vendor/font-awesome/fonts"
+$fa-font-path: "../../node_modules/font-awesome/fonts/";
