--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,5 @@
-@import "./_init";
+@import "./init";
+
 /* ----------------------------------------------------------------------------------------------------------------- *\
     Bootstrap
 \* ----------------------------------------------------------------------------------------------------------------- */
