--- a/assets/css/vendor.scss
+++ b/assets/css/vendor.scss
@@ -3,3 +3,6 @@
 @import "../../node_modules/bootstrap/scss/bootstrap";
 @import "../../node_modules/font-awesome/scss/font-awesome";
 @import "../../node_modules/sweetalert2/src/sweetalert2";
+$bs-datetimepicker-btn-hover-bg: $gray-800;
+@import "../../node_modules/tempusdominus-bootstrap-4/src/sass/tempusdominus-bootstrap-4";
+
