--- a/assets/css/vendor.scss
+++ b/assets/css/vendor.scss
@@ -5,4 +5,5 @@
 @import "../../node_modules/sweetalert2/src/sweetalert2";
 $bs-datetimepicker-btn-hover-bg: $gray-800;
 @import "../../node_modules/tempusdominus-bootstrap-4/src/sass/tempusdominus-bootstrap-4";
+@import "../../node_modules/highlight.js/styles/darkula.css";
 
