Search data in topic via sse
Assets full refactor

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,390 +1,12 @@
 @import "./init";
 
-/* ----------------------------------------------------------------------------------------------------------------- *\
-    Bootstrap
-\* ----------------------------------------------------------------------------------------------------------------- */
+@import "../modules/templates/bootstrap";
+@import "../modules/templates/layout";
+@import "../modules/templates/sidebar";
 
-// Tabs
-ul.nav-tabs {
-    .nav-link {
-        background-color: transparent;
-        border: 0 solid;
-        border-bottom-width: 4px;
-        border-bottom-color: transparent;
-        color: $body-color;
+@import "../modules/datas/datetime";
+@import "../modules/datas/filter";
+@import "../modules/datas/highlight";
 
-        &.active, &:hover.active {
-            font-weight: bold;
-            color: $primary;
-            border-bottom-color: $primary;
-            border-bottom-width: 4px;
-            background-color: transparent;
-        }
-
-        &:hover {
-            transition-duration: 0ms;
-            border-bottom-color: $gray-400;
-            border-bottom-width: 4px;
-        }
-    }
-}
-
-.tabs-container {
-    .tab-content {
-        padding: 20px;
-        border: 1px solid $nav-tabs-border-color;
-        background: $gray-900;
-        border-top: 0;
-    }
-}
-
-
-/* ----------------------------------------------------------------------------------------------------------------- *\
-    Layout
-\* ----------------------------------------------------------------------------------------------------------------- */
-a, button, input[type="submit"] {
-    transition-duration: 200ms;
-}
-
-body {
-    min-width: 320px;
-}
-
-.title {
-    display: flex;
-    position: relative;
-    width: calc(100% + 40px);
-    left: -20px;
-    top: -20px;
-    height: 74px;
-    border-bottom: 4px solid $yellow;
-    padding: 17px 20px 0;
-}
-
-h1 {
-    font-family: $font-family-title;
-    font-weight: 700;
-    font-size: 2rem;
-    color: white;
-    margin-bottom: 0;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    min-width: 0;
-}
-
-.wrapper {
-    display: flex;
-    width: 100%;
-    align-items: stretch;
-}
-
-#content {
-    @include media-breakpoint-up(md) {
-        width: calc(100% - 250px);
-    }
-
-    @include media-breakpoint-up(md) {
-        margin-left: 250px;
-    }
-
-    @include media-breakpoint-down(md) {
-        max-width: 100%;
-    }
-
-    padding: 20px;
-    min-height: 100vh;
-    transition: none;
-}
-
-nav.navbar {
-    a.dropdown-toggle {
-        white-space: nowrap;
-    }
-
-    .dropdown-menu {
-        .input-group {
-            margin: $dropdown-item-padding-y $dropdown-item-padding-x;
-            width: calc(100% - 3rem);
-            min-width: 200px;
-
-            input {
-                border: 0;
-            }
-        }
-    }
-}
-
-.page-item.info {
-    .page-link {
-        color: color-yiq($secondary);
-        @include gradient-bg($secondary);
-        white-space: nowrap;
-    }
-}
-
-.datetime-tempus {
-    min-width: 18.5rem;
-    padding-bottom: 0;
-
-    .datetime-container {
-        .col-md-6 {
-            max-width: none;
-            flex: auto;
-
-            .timepicker-picker {
-                border-top: 2px solid $gray-700;
-            }
-        }
-
-        .bootstrap-datetimepicker-widget {
-            .timepicker-hour, .timepicker-minute, .timepicker-second {
-                width: 16px;
-                font-weight: normal;
-            }
-
-            table {
-                & td {
-                    height: 16px;
-                    line-height: 16px;
-                    width: 16px;
-
-                    span {
-                        display: inline-block;
-                        width: 16px;
-                        height: 16px;
-                        line-height: 16px;
-                    }
-                }
-            }
-        }
-
-    }
-}
-
-/* ----------------------------------------------------------------------------------------------------------------- *\
-    Sidebar
-\* ----------------------------------------------------------------------------------------------------------------- */
-#sidebar {
-    min-width: 250px;
-    max-width: 250px;
-    background: $black;
-    color: #fff;
-    transition: all 0.3s;
-    font-family: $font-family-title;
-    font-size: $font-size-lg;
-    border-right: 1px solid $nav-tabs-border-color;
-
-    .sidebar-header {
-        padding: 5px 10px;
-        background: $tertiary;
-        border-bottom: 4px solid $yellow;
-        h3 {
-            margin-bottom: 0;
-            text-align: center;
-            sup {
-                color: $yellow;
-            }
-        }
-    }
-
-    ul {
-        p {
-            color: #fff;
-            padding: 10px;
-        }
-        li {
-            a {
-                padding: 10px;
-                display: block;
-                color: #FFFFFF;
-                &:hover {
-                    background: lighten($tertiary, 10%);
-                    text-decoration: none;
-                }
-            }
-            &.active > a {
-                color: #fff;
-                background: $tertiary;
-            }
-
-            ul {
-                border-bottom: 1px solid lighten($tertiary, 15%);
-                li a {
-                    background: $black;
-
-                    &.active {
-                        background: $yellow;
-                        color: $black;
-                    }
-                }
-            }
-        }
-    }
-
-
-    a {
-        &[aria-expanded="true"] {
-            color: #fff;
-            background: $tertiary;
-        }
-        &[data-toggle="collapse"] {
-            position: relative;
-        }
-    }
-
-    .dropdown-toggle::after {
-        display: block;
-        position: absolute;
-        top: 50%;
-        right: 20px;
-        transform: translateY(-50%);
-    }
-
-    ul ul a {
-        font-size: 0.9em !important;
-        padding-left: 30px !important;
-        background: $tertiary;
-    }
-
-    @include media-breakpoint-down(sm) {
-        & {
-            margin-left: -250px;
-            &.active {
-                margin-left: 0;
-            }
-        }
-        #sidebar-collapse span {
-            display: none;
-        }
-    }
-
-    @include media-breakpoint-up(md) {
-        position: fixed;
-        height: 100%;
-    }
-}
-
-
-/* ----------------------------------------------------------------------------------------------------------------- *\
-    Turbolinks
-\* ----------------------------------------------------------------------------------------------------------------- */
-.turbolinks-progress-bar {
-    background-color: $red;
-    box-shadow: 0 1px 10px red;
-}
-
-/* ----------------------------------------------------------------------------------------------------------------- *\
-    Table
-\* ----------------------------------------------------------------------------------------------------------------- */
-table {
-    tbody {
-        .main-row-action {
-            cursor: pointer;
-        }
-
-        th.row-action {
-            width: 16px;
-        }
-
-        td.row-action a {
-            color: $body-color;
-        }
-
-        pre {
-            white-space: pre-wrap;
-            overflow-wrap: break-word;
-            overflow: auto;
-            max-height: 100px;
-            cursor: pointer;
-            position: relative;
-
-            code {
-                white-space: pre-wrap;
-                overflow-wrap: break-word;
-                word-break: break-all;
-
-                &:after {
-                    content:'';
-                    width:100%;
-                    height:35px;
-                    position:absolute;
-                    left:0;
-                    bottom:0;
-                    background: linear-gradient(transparent, $gray-900);
-                }
-            }
-        }
-
-        tr:hover {
-            pre code:after {
-                background: linear-gradient(transparent, $indigo);
-            }
-        }
-
-        .hljs {
-            background: none;
-        }
-
-        tr.hightlight {
-            &:hover {
-                background: none;
-            }
-
-            pre {
-                overflow: hidden;
-                max-height: none;
-                cursor: default;
-
-                code:after {
-                    display: none;
-                }
-            }
-        }
-
-        tr.deleted {
-            opacity: 0.5;
-        }
-
-        .table.table-sm {
-            margin-top: calc(-#{$table-cell-padding});
-            width: calc(100% + (#{$table-cell-padding } * 2));
-            margin-left: -$table-cell-padding;
-            position: relative;
-            border-bottom: $table-border-width dashed $table-border-color;
-            font-size: $font-size-sm;
-
-            td, th {
-                border: 0;
-            }
-
-            th {
-                border-right: $table-border-width dashed $table-border-color;
-            }
-
-            tbody tr:nth-of-type(even) {
-                background-color: lighten($table-accent-bg, 0.1);
-            }
-
-            tbody tr:nth-of-type(odd) {
-                background-color: lighten($table-bg, 0.1);
-            }
-        }
-    }
-}
-
-/* ----------------------------------------------------------------------------------------------------------------- *\
-    Data
-\* ----------------------------------------------------------------------------------------------------------------- */
-.data-filter {
-    > nav {
-        display: flex;
-        order: 2;
-    }
-
-    > .navbar-collapse {
-        @include media-breakpoint-down(md) {
-            order: 3;
-        }
-    }
-}
+@import "../modules/tables/table";
+@import "../modules/tables/row-action";
