Allow to update node config

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -64,6 +64,7 @@ $table-hover-bg: darken($primary, 25%);
 $input-border-color: transparent !default;
 $input-group-addon-color: $gray-500 !default;
 $input-group-addon-bg: $gray-700 !default;
+$input-disabled-bg: $gray-500 !default;
 
 $custom-file-color: $gray-500 !default;
 $custom-file-border-color: $gray-700 !default;
