--- a/assets/modules/templates/layout.scss
+++ b/assets/modules/templates/layout.scss
@@ -65,11 +65,17 @@ form.khq-form {
         position: fixed;
         bottom: 0;
         background: red;
-        width: calc(100vw - 250px - 15px);
         margin-left: -40px;
         padding: 5px 15px;
         text-align: right;
         background: $black;
         border-top: 1px solid $nav-tabs-border-color;
+
+        @include media-breakpoint-up(md) {
+            width: calc(100vw - 250px - 15px);
+        }
+        @include media-breakpoint-down(md) {
+            width: calc(100vw - 15px);
+        }
     }
 }
