Allow to update consumer groups offsets

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -147,3 +147,8 @@ $pre-color: inherit !default;
     Font Awesome
 \* ----------------------------------------------------------------------------------------------------------------- */
 $fa-font-path: "../../node_modules/font-awesome/fonts/";
+
+/* ----------------------------------------------------------------------------------------------------------------- *\
+    Menu
+\* ----------------------------------------------------------------------------------------------------------------- */
+$menu-width: 250px;
