--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,9 +4,10 @@
 @import "../modules/templates/layout";
 @import "../modules/templates/sidebar";
 
-@import "../modules/datas/datetime";
 @import "../modules/datas/filter";
 @import "../modules/datas/highlight";
+
+@import "../modules/forms/datetime";
 
 @import "../modules/tables/table";
 @import "../modules/tables/row-action";
