--- a/assets/modules/templates/layout.scss
+++ b/assets/modules/templates/layout.scss
@@ -37,11 +37,11 @@ h1 {
 
 #content {
     @include media-breakpoint-up(md) {
-        width: calc(100% - 250px);
+        width: calc(100% - #{$menu-width});
     }
 
     @include media-breakpoint-up(md) {
-        margin-left: 250px;
+        margin-left: $menu-width;
     }
 
     @include media-breakpoint-down(md) {
@@ -66,30 +66,40 @@ form.khq-form div.khq-submit,
 #content aside {
     position: fixed;
     bottom: 0;
+    left: 0;
     background: red;
-    margin-left: -20px;
     padding: 5px 15px;
-    text-align: right;
     background: $black;
     border-top: 1px solid $nav-tabs-border-color;
-
+    display: flex;
+    justify-content: flex-end;
     width: calc(100vw);
     @include media-breakpoint-up(md) {
-        width: calc(100vw - 250px);
+        left: $menu-width;
+        width: calc(100vw - #{$menu-width});
+    }
+
+    > div {
+        flex: 1;
+
+        &:first-child {
+            flex-grow: 2;
+        }
+
+        &:last-child {
+            text-align: right;
+        }
+    }
+
+    .btn {
+        white-space: nowrap;
     }
 }
 
-.tab-pane form.khq-form div.khq-submit {
-    margin-left: -40px;
+form.khq-form div.khq-submit {
+
     width: calc(100vw - 15px);
     @include media-breakpoint-up(md) {
-        width: calc(100vw - 250px - 15px);
-    }
-}
-
-#content aside {
-    width: calc(100vw - 5px);
-    @include media-breakpoint-up(md) {
-        width: calc(100vw - 255px);
+        width: calc(100vw - #{$menu-width} - 15px);
     }
 }
