Ability to filter topic & group close #9

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -61,6 +61,7 @@ $table-dark-color: $white !default;
 $table-hover-bg: darken($primary, 25%);
 
 // Forms
+$input-border-width: 0;
 $input-border-color: transparent !default;
 $input-group-addon-color: $gray-500 !default;
 $input-group-addon-bg: $gray-700 !default;
