--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,7 +7,9 @@
 @import "../modules/datas/filter";
 @import "../modules/datas/highlight";
 
+@import "../modules/forms/ace";
 @import "../modules/forms/datetime";
+@import "../modules/forms/multiple";
 
 @import "../modules/tables/table";
 @import "../modules/tables/row-action";
