--- a/assets/css/vendor.scss
+++ b/assets/css/vendor.scss
@@ -4,6 +4,7 @@
 @import "../../node_modules/font-awesome/scss/font-awesome";
 @import "../../node_modules/sweetalert2/src/sweetalert2";
 $bs-datetimepicker-btn-hover-bg: $gray-800;
+$bs-datetimepicker-primary-border-color: $dropdown-border-color;
 @import "../../node_modules/tempusdominus-bootstrap-4/src/sass/tempusdominus-bootstrap-4";
 @import "../../node_modules/highlight.js/styles/darkula.css";
 
