--- a/assets/css/vendor.scss
+++ b/assets/css/vendor.scss
@@ -2,7 +2,26 @@
 
 @import "../../node_modules/bootstrap/scss/bootstrap";
 @import "../../node_modules/font-awesome/scss/font-awesome";
+
+$swal2-font-size: $font-size-base;
+$swal2-title-font-size: $font-size-lg;
+$swal2-content-font-size: $font-size-base;
+$swal2-input-font-size: $font-size-base;
+$swal2-validationerror-font-size: $font-size-base;
+$swal2-footer-font-size: $font-size-sm;
+$swal2-confirm-button-font-size: $font-size-base;
+$swal2-cancel-button-font-size: $font-size-base;
+$swal2-toast-title-font-size: $font-size-lg;
+$swal2-toast-content-font-size: $font-size-base;
+$swal2-toast-input-font-size: $font-size-base;
+$swal2-toast-validation-font-size: $font-size-base;
+$swal2-toast-buttons-font-size: $font-size-base;
+$swal2-toast-footer-font-size : $font-size-sm;
 @import "../../node_modules/sweetalert2/src/sweetalert2";
+.swal2-content code {
+    font-weight: bold;
+}
+
 $bs-datetimepicker-btn-hover-bg: $gray-800;
 $bs-datetimepicker-primary-border-color: $dropdown-border-color;
 @import "../../node_modules/tempusdominus-bootstrap-4/src/sass/tempusdominus-bootstrap-4";
