Schema registry deserialize on data page
add stream test data with avro schema

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -154,3 +154,4 @@ $fa-font-path: "../../node_modules/font-awesome/fonts/";
     Menu
 \* ----------------------------------------------------------------------------------------------------------------- */
 $menu-width: 250px;
+$scrollbar-width: 0.5em
