implementing generic table

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -2200,7 +2200,7 @@ pre code {
   background-color: #303030;
 }
 
-.table-hover tbody tr:hover {
+.table-hover tbody tr:hover td {
   color: #fff;
   background-color: #116787;
 }
