--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -25,6 +25,8 @@
 @import "assets/modules/templates/login.scss";
 @import "assets/modules/templates/sidebar.scss";
 
+@import "containers/NodeDetails/styles.scss";
+
 .App {
   text-align: center;
 }
