WIP: Headers row pretty

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -26,7 +26,7 @@
 @import "assets/modules/templates/sidebar.scss";
 
 @import "containers/NodesList/Node/styles.scss";
-
+@import "containers/TopicList/Topic/TopicProduce/styles.scss";
 .App {
   text-align: center;
 }
@@ -42,6 +42,7 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+
 
 .App-header {
   background-color: #282c34;
