WIP: Finished implementing date picker and add/remove headers

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -27,6 +27,8 @@
 
 @import "containers/NodesList/Node/styles.scss";
 @import "containers/TopicList/Topic/TopicProduce/styles.scss";
+@import "~react-datepicker/dist/react-datepicker.css";
+
 .App {
   text-align: center;
 }
