--- a/client/src/containers/TopicList/Topic/TopicProduce/styles.scss
+++ b/client/src/containers/TopicList/Topic/TopicProduce/styles.scss
@@ -6,5 +6,23 @@ padding-bottom: 0;
 }
 
 .input-class{
-  width:100%
+  width: 100%;
+}
+
+.add-button {
+  height: 80%;
+}
+
+.header-wrapper {
+  display: flex;
+  direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-row {
+  min-width: 80%;
+  justify-content: space-between;
+  padding: 0 !important;
+  padding-right: 2% !important;
 }
