--- a/client/src/containers/TopicList/Topic/TopicData/styles.scss
+++ b/client/src/containers/TopicList/Topic/TopicData/styles.scss
@@ -90,13 +90,15 @@
     display: none;
 }
 
-.page-input {
-    width: 100% !important;
-}
-
-a.page-link.page-number {
-    display: inline-block;
-    margin-left: 2.5rem;
+.pagination-data {
+    .page-input {
+        width: 100%;
+    }
+    
+    a.page-link.page-number {
+        display: inline-block;
+        margin-left: 2.5rem;
+    }
 }
 
 .dropdown-toggle, .dropdown-toggle:hover, .dropdown-toggle:focus {
