AKHQ-113 - Fix toasts css - Added new css classes for code view modal

--- a/client/src/components/Modal/CodeViewModal/styles.scss
+++ b/client/src/components/Modal/CodeViewModal/styles.scss
@@ -1,10 +1,10 @@
-.swal2-show {
+.code-view-modal {
     width: 40rem;
     height: 35rem;
     background-color: #2F3129;
 }
 
-.ace_editor, .swal2-content, #swal2-content, #aceEditor {
+.ace_editor, .code-view-content, #aceEditor {
     width: 100% !important;
     height: 100% !important;
 }
