--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -303,8 +303,9 @@ form.khq-form div.khq-submit,
 @media (min-width: 768px) {
   form.khq-form div.khq-submit,
   #content aside {
-    left: 250px;
-    width: calc(100vw - 250px - 15px);
+    border-top: 1px transparent;
+    background-color: black;
+    width: 100vw ;
   }
 }
 
@@ -353,17 +354,15 @@ form.khq-form div.khq-submit .btn,
 }
 
 #khq-sidebar {
-  min-width: $menu-width;
-  max-width: $menu-width;
-  background: $black;
-  color: #fff;
-  transition: all 0.3s;
-  font-family: $font-family-title;
-  font-size: $font-size-lg;
-  border-right: 1px solid $nav-tabs-border-color;
-  z-index: 2;
-  display: flex;
-  flex-direction: column;
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
 
   .sidebar-header {
       padding: 5px 10px;
@@ -442,7 +441,11 @@ form.khq-form div.khq-submit .btn,
       padding-left: 30px !important;
       background: $tertiary;
   }
-
+  .container-sidenav {
+    position: relative;
+    text-align: center;
+    color: white;
+  }
   .sidebar-log {
       padding: 5px 10px;
       background: $tertiary;
@@ -453,6 +456,11 @@ form.khq-form div.khq-submit .btn,
               text-decoration: none;
           }
       }
+  }
+  .top-right {
+    position: absolute;
+    top: 8px;
+    right: 16px;
   }
 
   @include media-breakpoint-down(sm) {
@@ -960,7 +968,7 @@ body {
   font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 0.875rem;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1.6;
   color: #fff;
   text-align: left;
   background-color: #171819;
@@ -2655,7 +2663,7 @@ pre code {
   padding: 0.375rem 0.75rem;
   font-size: 0.875rem;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1.6;
   color: #444;
   background-color: #fff;
   background-clip: padding-box;
@@ -2709,21 +2717,21 @@ select.form-control:focus::-ms-value {
   padding-bottom: calc(0.375rem + 1px);
   margin-bottom: 0;
   font-size: inherit;
-  line-height: 1.5;
+  line-height: 1.6;
 }
 
 .col-form-label-lg {
   padding-top: calc(0.5rem + 1px);
   padding-bottom: calc(0.5rem + 1px);
   font-size: 1.09375rem;
-  line-height: 1.5;
+  line-height: 1.6;
 }
 
 .col-form-label-sm {
   padding-top: calc(0.25rem + 1px);
   padding-bottom: calc(0.25rem + 1px);
   font-size: 0.76562rem;
-  line-height: 1.5;
+  line-height: 1.6;
 }
 
 .form-control-plaintext {
@@ -2732,7 +2740,7 @@ select.form-control:focus::-ms-value {
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
   margin-bottom: 0;
-  line-height: 1.5;
+  line-height: 1.6;
   color: #fff;
   background-color: transparent;
   border: solid transparent;
@@ -2748,7 +2756,7 @@ select.form-control:focus::-ms-value {
   height: calc(1.5em + 0.5rem + 2px);
   padding: 0.25rem 0.5rem;
   font-size: 0.76562rem;
-  line-height: 1.5;
+  line-height: 1.6;
   border-radius: 0.2rem;
 }
 
@@ -2756,7 +2764,7 @@ select.form-control:focus::-ms-value {
   height: calc(1.5em + 1rem + 2px);
   padding: 0.5rem 1rem;
   font-size: 1.09375rem;
-  line-height: 1.5;
+  line-height: 1.6;
   border-radius: 0.3rem;
 }
 
@@ -2841,7 +2849,7 @@ textarea.form-control {
   padding: 0.25rem 0.5rem;
   margin-top: .1rem;
   font-size: 0.76562rem;
-  line-height: 1.5;
+  line-height: 1.6;
   color: #fff;
   background-color: rgba(41, 156, 70, 0.9);
   border-radius: 0.25rem;
@@ -2964,7 +2972,7 @@ textarea.form-control {
   padding: 0.25rem 0.5rem;
   margin-top: .1rem;
   font-size: 0.76562rem;
-  line-height: 1.5;
+  line-height: 1.6;
   color: #fff;
   background-color: rgba(212, 74, 58, 0.9);
   border-radius: 0.25rem;
@@ -3140,7 +3148,7 @@ textarea.form-control {
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
   font-size: 0.875rem;
-  line-height: 1.5;
+  line-height: 1.6;
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
@@ -3854,14 +3862,14 @@ fieldset:disabled a.btn {
 .btn-lg, .btn-group-lg > .btn {
   padding: 0.5rem 1rem;
   font-size: 1.09375rem;
-  line-height: 1.5;
+  line-height: 1.6;
   border-radius: 0.3rem;
 }
 
 .btn-sm, .btn-group-sm > .btn {
   padding: 0.25rem 0.5rem;
   font-size: 0.76562rem;
-  line-height: 1.5;
+  line-height: 1.6;
   border-radius: 0.2rem;
 }
 
@@ -4391,7 +4399,7 @@ input[type="button"].btn-block {
   margin-bottom: 0;
   font-size: 0.875rem;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1.6;
   color: #adb5bd;
   text-align: center;
   white-space: nowrap;
@@ -4418,7 +4426,7 @@ input[type="button"].btn-block {
 .input-group-lg > .input-group-append > .btn {
   padding: 0.5rem 1rem;
   font-size: 1.09375rem;
-  line-height: 1.5;
+  line-height: 1.6;
   border-radius: 0.3rem;
 }
 
@@ -4435,7 +4443,7 @@ input[type="button"].btn-block {
 .input-group-sm > .input-group-append > .btn {
   padding: 0.25rem 0.5rem;
   font-size: 0.76562rem;
-  line-height: 1.5;
+  line-height: 1.6;
   border-radius: 0.2rem;
 }
 
@@ -4620,7 +4628,7 @@ input[type="button"].btn-block {
   padding: 0.375rem 1.75rem 0.375rem 0.75rem;
   font-size: 0.875rem;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1.6;
   color: #444;
   vertical-align: middle;
   background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%23303030' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px;
@@ -4715,7 +4723,7 @@ input[type="button"].btn-block {
   height: calc(1.5em + 0.75rem + 2px);
   padding: 0.375rem 0.75rem;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1.6;
   color: #adb5bd;
   background-color: #fff;
   border: 1px solid #444;
@@ -4731,7 +4739,7 @@ input[type="button"].btn-block {
   display: block;
   height: calc(1.5em + 0.75rem);
   padding: 0.375rem 0.75rem;
-  line-height: 1.5;
+  line-height: 1.6;
   color: #adb5bd;
   content: "Browse";
   background-color: #444;
@@ -5684,7 +5692,7 @@ input[type="button"].btn-block {
 .pagination-lg .page-link {
   padding: 0.75rem 1.5rem;
   font-size: 1.09375rem;
-  line-height: 1.5;
+  line-height: 1.6;
 }
 
 .pagination-lg .page-item:first-child .page-link {
@@ -5700,7 +5708,7 @@ input[type="button"].btn-block {
 .pagination-sm .page-link {
   padding: 0.25rem 0.5rem;
   font-size: 0.76562rem;
-  line-height: 1.5;
+  line-height: 1.6;
 }
 
 .pagination-sm .page-item:first-child .page-link {
@@ -6702,7 +6710,7 @@ a.close.disabled {
 
 .modal-title {
   margin-bottom: 0;
-  line-height: 1.5;
+  line-height: 1.6;
 }
 
 .modal-body {
@@ -6780,7 +6788,7 @@ a.close.disabled {
   font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-style: normal;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1.6;
   text-align: left;
   text-align: start;
   text-decoration: none;
@@ -6893,7 +6901,7 @@ a.close.disabled {
   font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-style: normal;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1.6;
   text-align: left;
   text-align: start;
   text-decoration: none;
